fix: avoid List.getFirst() risk in InventoryTools after Java 21 rewrite